# Stellar-Hack-vinculo-credito

./: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.lovable/memory/: index.md
backend/: .env  .txt  package-lock.json  package.json  server.js
backend/contracts/staking_pool/: Cargo.toml
backend/contracts/staking_pool/src/: lib.rs
backend/contracts/vinculo_lending/: Cargo.toml
backend/contracts/vinculo_lending/src/: lib.rs
backend/contracts/vinculo_sbt/: Cargo.toml
backend/contracts/vinculo_sbt/src/: lib.rs
backend/contracts/vinculo_sbt/test_snapshots/tests/: test_initialize_and_mint_badge.1.json  test_invalid_tier_panics.1.json  test_multiple_users_independent_tiers.1.json
metadata/: diamante.json  oro.json  plata.json  platino.json
src/: App.tsx  index.css
src/components/: ActivityList.tsx  BalanceCard.tsx  BottomNav.tsx  CreditSection.tsx  DepositModal.tsx  NFTModal.tsx  ProgressRing.tsx
src/context/: AppContext.tsx  ReputationContext.tsx
src/integrations/supabase/: types.ts
src/lib/: reputationLevels.tsx
src/pages/: Ayuda.tsx  Historial.tsx  Index.tsx  Login.tsx  Notificaciones.tsx  Onboarding.tsx  Perfil.tsx  Retiros.tsx
src/stellar/: contracts.ts  nft-metadata.json  queries.ts
supabase/: config.toml
supabase/migrations/: 20260320203812_d45f2283-c532-4aa0-b4a6-6ad9f5230145.sql
