[package]
name = "vinculo_lending"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "21.7.6", features = ["alloc"] }
vinculo_sbt = { path = "../vinculo_sbt" }

[dev-dependencies]
soroban-sdk = { version = "21.7.6", features = ["testutils", "alloc"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
codegen-units = 1
panic = "abort"
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
